# internal/server/grpc.go
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, realworld *service.RealWorldService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, us *service.UserService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +27,6 @@ func NewGRPCServer(c *conf.Server, realworld *service.RealWorldService, logger l
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterRealWorldServer(srv, realworld)
+	v1.RegisterUserServer(srv, us)
 	return srv
 }
