# internal/server/http.go
@@ -11,7 +11,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, realworld *service.RealWorldService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, us *service.UserService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -27,6 +27,6 @@ func NewHTTPServer(c *conf.Server, realworld *service.RealWorldService, logger l
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterRealWorldHTTPServer(srv, realworld)
+	v1.RegisterUserHTTPServer(srv, us)
 	return srv
 }
